Updated to JDK 17